--- a/style.css
+++ b/style.css
@@ -11,7 +11,15 @@ body {
 }
 
 body {
-  overflow: hidden;
+    overflow: hidden;
+  display: flex;
+  background: linear-gradient(45deg, #111, #222, #111);
+  background-size: 400% 400%;
+  animation: gradientMove 10s ease infinite;
+  perspective: 1000px;
+  transform-style: preserve-3d;
+
+  /*overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -19,7 +27,7 @@ body {
   -webkit-perspective: 1000px;
           perspective: 1000px;
   -webkit-transform-style: preserve-3d;
-          transform-style: preserve-3d;
+          transform-style: preserve-3d;*/
 }
 
 #drag-container, #spin-container {
